--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -38,8 +38,8 @@ main {
     flex: 1; /* ocupa todo el espacio disponible */
 
     /* Box Model */
-    padding-inline-start: var(--padding-xxxxlarge);
-    padding-inline-end: var(--padding-xxlarge);
+    padding-inline-start: var(--space-11);
+    padding-inline-end: var(--space-6);
 }
 
 /* =========================
@@ -49,10 +49,10 @@ main {
     /* Layout */
     display: flex;
     justify-content: center;
-    gap: 30px;
+    gap: var(--space-6);
 
     /* Box Model */
-    margin-top: 40px;
+    margin-top: var(--space-7);
     
     /* Texto */
     color: var(--color-text);
@@ -62,7 +62,7 @@ main {
     /* Layout */
     display: flex;
     flex-direction: column;
-    gap: 45px;
+    gap: var(--space-7);
 
     /* Box Model */
     width: 50%;
@@ -72,25 +72,25 @@ main {
     /* Layout */
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: var(--space-6);
 }
 
 .form__menssage-title{
     /* Texto */
-    font: 600 var(--title-size)/1 var(--font-family);
+    font: 600 var(--font-size-title)/1 var(--font-family);
 }
 
 .form__menssage-text{
     /* Texto */
     color: var(--color-desc);
-    font: 400 18px/1.3 var(--font-family);
+    font: 400 var(--font-size-lg)/1.3 var(--font-family);
 }
 
 .form__email-container{
     /* Layout */
     display: flex;
     align-items: center;
-    gap: 15px;
+    gap: var(--space-3);
 }
 
 .form__email-container .icon,
@@ -106,14 +106,14 @@ main {
 .form__email{
     /* Texto */
     color: var(--color-text);
-    font: 400 15px/1 var(--font-family);
+    font: 400 var(--font-size-base)/1 var(--font-family);
 }
 
 .form__social-container{
     /* Layout */
     display: flex;
     align-items: center;
-    gap: 15px;
+    gap: var(--space-3);
 }
 
 .form__social-media{
@@ -121,7 +121,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: var(--space-4);
 }
 
 .form__social-media .form__icon{
@@ -142,7 +142,7 @@ main {
 .form__container form {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: var(--space-3);
 }
 
 .form__container-elements{
@@ -158,10 +158,10 @@ main {
 
 .form__container input,
 .form__container textarea {
-    padding: 10px 12px;
-    border-radius: var(--radius-small);
+    padding: var(--space-1) var(--space-2);
+    border-radius: var(--radius-sm) ;
     border: 1px solid #ccc;
-    font-size: 1rem;
+    font-size: var(--font-size-base);
     resize: vertical;
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
