--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -15,13 +15,8 @@
     :root{
         /* ----- Tamaños / Dimensiones ----- */
     --navbar-width-closed: 90%;
-    --navbar-width-open: 200px;
-    --navbar-radius: 20px;
+    --navbar-width-open: 12.5rem;     /* 200px */
 
-    /* ----- Espaciados ----- */
-    --gap-navbar-items: 20px;
-    --padding-navbar: 5px 0;
-    --padding-section: 30px;
     }
 
 
@@ -41,7 +36,7 @@
         flex-direction: row;
 
         /* Box Model */
-        padding: var(--padding-navbar);
+        padding: 0.25rem;
     }
 
     /* Estado abierto */
@@ -55,6 +50,7 @@
         /* Layout */
         flex-direction: row-reverse;
         justify-content: space-evenly;
+        gap: var(--space-1);
 
 
         /* Box Model */
@@ -67,12 +63,23 @@
         width: fit-content;
     }
 
+    /* Estado cerrado de los links */
+    .lateral-navbar:not(.open) a {
+        font: var(--font-size-xs)/1 var(--font-family);
+    }
+    
+    .lateral-navbar.open a {
+        font: var(--font-size-xs)/1 var(--font-family);
+}
+
+
 
     /* Contenedor de links */
     .links-container {
         /* Layout */
         flex-direction: row;
         justify-content: space-between;
+        gap: var(--space-2);
 
         /* Box Model */
         width: fit-content;
@@ -110,7 +117,7 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: flex-start;
-        gap: var(--gap-navbar-items);
+        gap: var(--radius-lg) ;
 
         /* Box Model */
         width: 100%;
@@ -125,9 +132,9 @@
     }
 
     .lateral-navbar.open .links-container {
-        margin-left: 15px;
-        margin-top: 20px;
-        margin-bottom: 20px;
+        margin-left: var(--space-3) ;
+        margin-top: var(--space-4) ;
+        margin-bottom: var(--space-4) ;
     }
 
 
@@ -141,46 +148,61 @@
     /* Seccion Presentacion */
     .presentation {
         /* Layout */
-        gap: 10px;
+        gap: var(--space-1) ;
         flex-direction: column;
         align-items: center;
 
         /* Box model */
         width: 100%;
-        margin: 60px 0;
+        margin: var(--space-9) 0;
     }
 
     .presentation__container-text {
         /* Box model */
         max-width: 100%;
+        gap: var(--space-2);
     }
 
     .presentation__container-name:hover{
-        gap: 20px;
+        gap: var(--space-4) ;
     }
 
     .presentation__arrow{
         /* Texto */
-        font: 700 35px/1 var(--font-family);
+        font: 700 var(--font-size-3xl)/1 var(--font-family);
     }
 
     .presentation__name {
         /* Texto */
-        font: 700 40px/1 var(--font-family); /* nombre muy grande */
+        font: 700 var(--font-size-title)/1 var(--font-family); /* nombre muy grande */
+    }
+
+    .presentation__container-name{
+        /* Layout */
+        gap: 0;
+    }
+
+    .presentation__container-name:hover{
+        gap: var(--space-1);
+    }
+
+    .presentation__role {
+    /* Texto */
+        font: 700 var(--font-size-2xl)/1 var(--font-family);
     }
 
     .presentation__pagraph-1,
     .presentation__pagraph-2 {
 
         /* Texto */
-        font: 400 16px/1.2 var(--font-family);
+        font: 400 var(--font-size-base)/1.2 var(--font-family);
     }
 
     .presentation__container-image img {
         /* Box Model */
         width: 200px;
         height: auto;
-        border-radius: 10px;
+        border-radius: var(--radius-md) ;
         
         /* Efectos */
         transition: opacity 1.5s ease, transform 0.5s ease;
@@ -201,9 +223,8 @@
 
     /* Seccion Porfolio */
     .portfolio {
-        padding: 30px;
+        padding: var(--space-6);
     }
-
 
     .portfolio__project {
         /* Layout */
@@ -224,12 +245,12 @@
 
     .portfolio__subtitle {
         /* Texto */
-        font: 600 24px/1.5 var(--font-family);
+        font: 600 var(--font-size-xl)/1.5 var(--font-family);
     }
 
     .portfolio__decription-title{
         /* Texto */
-        font: 500 18px/1 var(--font-family);
+        font: 500 var(--font-size-lg)/1 var(--font-family);
     }
 
 
@@ -243,12 +264,12 @@
     /* ========== SECCIÓN SKILLS ========== */
     .skills {
         /* Layout */
-        gap: 30px;
+        gap: var(--space-6);
     }
 
     .skills__list-elements {
         /* Layout */
-        gap: 30px;
+        gap: var(--space-4);
 
     }
 
@@ -277,12 +298,12 @@
         /* Box Model */
         width: 100%;
         margin: 0;
-        padding: var(--padding-section);
+        padding: var(--space-9) var(--space-4);
     }
 
     .about__text {
         /* Texto */
-        font: 400 16px/24px var(--font-family);
+        font: 400 var(--font-size-base)/1.2 var(--font-family);
     }
 
     .about__hobbies_container {
@@ -297,8 +318,8 @@
     /* Footer */
     .footer__container-links{
         /* Layout */
-        gap: 15px;
-        margin-bottom: 10px;
+        gap: var(--space-3) ;
+        margin-bottom: var(--space-1) ;
     }
 
     .footer__link{
@@ -306,7 +327,7 @@
         padding: 0;
 
         /* Texto */
-        font: 600 14px/20px var(--font-family);
+        font: 600 var(--font-size-sm)/1 var(--font-family);
     }
 
     .footer__link[data-hide-mobile]{
@@ -316,13 +337,69 @@
     .footer__container-email{
         /* Layout */
         flex-direction: column;
-        gap: 15px;
+        gap: var(--space-3) ;
     }
 
     #backToTop {
         /* Posicionamiento */
         right: 15px;
     }
+
+/* =========================
+    Contact Section
+========================= */
+.form-contact{
+    /* Layout */
+    flex-direction: column;
+    align-items: start;
+
+    /* Box Model */
+    margin-top: var(--space-8);
+    padding: var(--space-6) var(--space-3);
+}
+
+.form__menssage{
+    /* Box Model */
+    width: 100%;
+}
+
+.form__menssage-container{
+    /* Layout */
+    gap: var(--space-4);
+}
+
+.form__menssage-title{
+    /* Texto */
+    font: 600 var(--font-size-3xl)/1 var(--font-family);
+}
+
+.form__menssage-text{
+    /* Texto */
+    font: 400 var(--font-size-sm)/1.3 var(--font-family);
+}
+
+.form__email-container{
+    /* Layout */
+    gap: var(--space-1);
+
+    /* Box Model */
+    width: fit-content;
+}
+
+.form__email{
+    /* Texto */
+    font: 400 var(--font-size-sm)/1 var(--font-family);
+}
+
+.form__container {
+    /* Box Model */
+    width: 100%;
+}
+
+.form__container input,
+.form__container textarea {
+    border-radius: var(--radius-sm);
+}
 
 }
 
