--- a/public/assets/css/pages/index.css
+++ b/public/assets/css/pages/index.css
@@ -173,10 +173,10 @@ main {
     gap: var(--space-6);
 
     /* Box Model */
-    width: 100%;
+    width: 80%;
     height: fit-content;
     margin-bottom: var(--space-6);
-    padding: var(--space-4);
+    padding: var(--space-6);
     border-radius: var(--radius-xs);
 
     /* Fondo/Borde */
@@ -192,11 +192,22 @@ main {
     border: 1.4px solid var(--color-primary);
     box-shadow: 0px 0px 20px 3px rgb(246, 145, 0, 0.50);}
 
+.portfolio__container-image {
+    /* Layout */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    /* Box Model */
+
+    width: 40%;
+    border-radius: var(--radius-xs);
+}
 
 .portfolio__image {
     /* Box Model */
-    width: 900px;
-    max-height: 260px;
+    width: 100%;
+    max-height: 300px;
     border-radius: var(--radius-xs);
     
 
@@ -223,6 +234,9 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    /* Box model */
+    width: 60%;
 }
 
 .portfolio__container-title-links{
