--- a/public/assets/css/pages/index.css
+++ b/public/assets/css/pages/index.css
@@ -376,7 +376,10 @@ main {
     opacity: 1;
 }
 
-.portfolio__info{
+.portfolio__more-feature {
+    /* Layout */
+    list-style-type: square;
+
     /* Texto */
     font: 400 var(--font-size-sm)/1.3 var(--font-family);
     color: var(--color-text);
