--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -502,7 +502,7 @@
         padding: 0;
 
         /* Texto */
-        font: 600 var(--font-size-sm)/1 var(--font-family);
+        font: 600 var(--font-size-xs)/1 var(--font-family);
     }
 
     .footer__link[data-hide-mobile]{
@@ -520,61 +520,61 @@
         right: 15px;
     }
 
-/* =========================
-    Contact Section
-========================= */
-.form-contact{
-    /* Layout */
-    flex-direction: column;
-    align-items: start;
+    /* =========================
+        Contact Section
+    ========================= */
+    .form-contact{
+        /* Layout */
+        flex-direction: column;
+        align-items: start;
 
-    /* Box Model */
-    margin-top: var(--space-8);
-    padding: var(--space-6) var(--space-3);
-}
+        /* Box Model */
+        margin-top: var(--space-8);
+        padding: var(--space-6) var(--space-3);
+    }
 
-.form__menssage{
-    /* Box Model */
-    width: 100%;
-}
+    .form__menssage{
+        /* Box Model */
+        width: 100%;
+    }
 
-.form__menssage-container{
-    /* Layout */
-    gap: var(--space-4);
-}
+    .form__menssage-container{
+        /* Layout */
+        gap: var(--space-4);
+    }
 
-.form__menssage-title{
-    /* Texto */
-    font: 600 var(--font-size-3xl)/1 var(--font-family);
-}
+    .form__menssage-title{
+        /* Texto */
+        font: 600 var(--font-size-3xl)/1 var(--font-family);
+    }
 
-.form__menssage-text{
-    /* Texto */
-    font: 400 var(--font-size-sm)/1.3 var(--font-family);
-}
+    .form__menssage-text{
+        /* Texto */
+        font: 400 var(--font-size-sm)/1.3 var(--font-family);
+    }
 
-.form__email-container{
-    /* Layout */
-    gap: var(--space-1);
+    .form__email-container{
+        /* Layout */
+        gap: var(--space-1);
 
-    /* Box Model */
-    width: fit-content;
-}
+        /* Box Model */
+        width: fit-content;
+    }
 
-.form__email{
-    /* Texto */
-    font: 400 var(--font-size-sm)/1 var(--font-family);
-}
+    .form__email{
+        /* Texto */
+        font: 400 var(--font-size-sm)/1 var(--font-family);
+    }
 
-.form__container {
-    /* Box Model */
-    width: 100%;
-}
+    .form__container {
+        /* Box Model */
+        width: 100%;
+    }
 
-.form__container input,
-.form__container textarea {
-    border-radius: var(--radius-sm);
-}
+    .form__container input,
+    .form__container textarea {
+        border-radius: var(--radius-sm);
+    }
 
 }
 
