style: cambio del tamaño de las flechas (< y />) de los titulos

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -162,6 +162,11 @@
     }
 
 
+    .arrow{
+        /* Texto */
+        font: 700 var(--font-size-3xl)/1 var(--font-family);
+    }
+
     /* ========== NAVBAR LATERAL ========== */
     .lateral-navbar {
         /* Posicionamiento */
